--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>oa</title>
   	<link rel="stylesheet" type="text/css" href="static/css/reset.css">
   	<link rel="stylesheet" type="text/css" href="static/font/style.css">
-	<link rel="stylesheet" href="static/css/weui.css">
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="static/js/jquery-weui.min.js"></script>
+	  <link rel="stylesheet" type="text/css" href="static/css/weui.css">
+    <link rel="stylesheet" type="text/css" href="static/css/simple-calendar.css">
+	  <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	  <script src="static/js/jquery-weui.min.js"></script>
   	<script type="text/javascript" src="static/js/makefontsize.js"></script>
   </head>
   <body style="background-color: #f5f5f5">
