--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>oa</title>
-  	<link rel="stylesheet" type="text/css" href="static/css/reset.css">
+  	<link rel="stylesheet" type="text/css" href="static/css/reset.css?2019-05-28">
   	<link rel="stylesheet" type="text/css" href="static/font/style.css">
 	  <link rel="stylesheet" type="text/css" href="static/css/weui.css">
     <link rel="stylesheet" type="text/css" href="static/css/simple-calendar.css">
